manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: staging:/Namespace:/staging
  name: staging
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: staging:/Service:staging/staging-demo
  labels:
    app.kubernetes.io/instance: staging
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: demo
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: demo-0.1.0
  name: staging-demo
  namespace: staging
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: staging
    app.kubernetes.io/name: demo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: staging:apps/Deployment:staging/staging-demo
  labels:
    app.kubernetes.io/instance: staging
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: demo
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: demo-0.1.0
  name: staging-demo
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: staging
      app.kubernetes.io/name: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: staging
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: demo
        app.kubernetes.io/version: 1.16.0
        helm.sh/chart: demo-0.1.0
    spec:
      containers:
        - image: nginx:1.16.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
          name: demo
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html-volume
      volumes:
        - configMap:
            name: staging-demo-html
          name: html-volume
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: staging:gateway.networking.k8s.io/HTTPRoute:staging/staging-demo
  name: staging-demo
  namespace: staging
spec:
  hostnames:
    - weu-staging.feddema.dev
  parentRefs:
    - name: envoy-gateway-public
      namespace: envoy-gateway
      sectionName: web-https
  rules:
    - backendRefs:
        - name: staging-demo
          port: 80
